changes to make sbt-cucumber-plugin work with Java 1.8 (no more MaxPermSize), cucumber-jvm 1.2.4 (DefaultSummaryPrinter, --plugin) and Scala 2.11.7